cilium-networkpolicies/authentik-networkpolicies/netpol-authentik-outpost.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: netpol-authentik-outpost-ingress
  namespace: authentik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: authentik
      app.kubernetes.io/component: server
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: netpol-authentik-outpost-egress
  namespace: traefik
spec:
  endpointSelector:
    matchLabels:
        app.kubernetes.io/name: traefik
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: authentik
            app.kubernetes.io/name: authentik
            app.kubernetes.io/component: server
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
