cilium-networkpolicies/authentik-networkpolicies/netpol-authentik-server.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: netpol-authentik-server
  namespace: authentik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: server
      app.kubernetes.io/instance: authentik
      app.kubernetes.io/name: authentik
  egress:
    - toFQDNs:
        - matchName: auth.manishreddy.uk
      toPorts:
        - ports:
            - port: "443"
