cilium-networkpolicies/authentik-networkpolicies/netpol-authentik-worker.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: netpol-authentik-worker
  namespace: authentik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: worker
      app.kubernetes.io/instance: authentik
      app.kubernetes.io/name: authentik
  egress:
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toFQDNs:
        - matchName: version.goauthentik.io
      toPorts:
        - ports:
            - port: "443"
